# backend/internal/models/chat_message.go
@@ -5,7 +5,8 @@ import "gorm.io/gorm"
 type ChatMessage struct {
 	gorm.Model
 	Sender        User
-	SenderID      uint   `gorm:"not null;index"`
-	Content       string `gorm:"not null"`
-	ChatSessionID uint   `gorm:"not null;index"`
+	SenderID      uint    `gorm:"not null;index"`
+	Content       string  `gorm:"not null"`
+	ImageURL      *string `gorm:"default:null"`
+	ChatSessionID uint    `gorm:"not null;index"`
 }
