# backend/internal/models/rating.go
@@ -6,7 +6,9 @@ type Rating struct {
 	gorm.Model
 	Rating     uint   `gorm:"not null"`
 	Feedback   string `gorm:"not null"`
-	ReviewerID uint   `gorm:"not null;index"`
+	ProductID  uint   `gorm:"not null;index;default:1"`
+	Product    Product
+	ReviewerID uint `gorm:"not null;index"`
 	Reviewer   User
 	RevieweeID uint `gorm:"not null;index"`
 	Reviewee   User
