# backend/internal/routes/shared/dto.go
@@ -1,9 +1,0 @@
-package shared
-
-type ErrorResponse struct {
-	Error string `json:"error"`
-}
-
-type MessageResponse struct {
-	Message string `json:"message"`
-}
